--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body dir="rtl">
   <app-root></app-root>
 </body>
 </html>
